objects/Pricing_Request_Item__c.object
<CustomObject>
    <fields>
        <fullName>Price_Zone__c</fullName>
        <description>To store Price Zone value which will selected by user while raising the price request</description>
        <label>Price Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Condition_Code__c</fullName>
        <label>Pricing Condition Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Condition__c</fullName>
        <label>Pricing Condition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Request_Type__c</fullName>
        <label>Pricing Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Spot</fullName>
                </value>
                <value>
                    <fullName>Import</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Floor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Request__c</fullName>
        <label>Pricing Request</label>
        <referenceTo>Pricing_Request__c</referenceTo>
        <relationshipLabel>Pricing Request Item</relationshipLabel>
        <relationshipName>Pricing_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pricing_Task_UoM__c</fullName>
        <label>Pricing Task UoM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy_Code__c</fullName>
        <label>Product Hierarchy Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy__c</fullName>
        <label>Product Hierarchy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Code__c</fullName>
        <label>Profit Center Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <label>Profit Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_One__c</fullName>
        <label>Rate One</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Price_in_USD__c</fullName>
        <label>Ref Price in USD</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Application_Id__c</fullName>
        <label>SAP Application Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Client_Id__c</fullName>
        <label>SAP Client Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Cluster__c</fullName>
        <label>SAP Cluster</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District_Code__c</fullName>
        <label>Sales District Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <label>Sales District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Code__c</fullName>
        <label>Sales Office Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Item_Code__c</fullName>
        <description>To store Sales order item code value which is selected by user while raising the price request</description>
        <label>Sales Order Item Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Item__c</fullName>
        <description>To store Sales order item value which is selected by user while raising the price request</description>
        <label>Sales Order Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Type_Code__c</fullName>
        <label>Sales Order Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Type__c</fullName>
        <label>Sales Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Org. Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Reduction__c</fullName>
        <formula>Value(Quantity__c) * ( VALUE(Rate__c )-  VALUE(New_Rate__c)   )</formula>
        <label>Sales Reduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScaleRate10__c</fullName>
        <label>ScaleRate10</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScaleRate1__c</fullName>
        <label>ScaleRate1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScaleRate2__c</fullName>
        <label>ScaleRate2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scale_Basis_Code__c</fullName>
        <label>Scale Basis Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scale_Basis__c</fullName>
        <label>Scale Basis</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Scale_Basis_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity Scale</fullName>
                </value>
                <value>
                    <fullName>Value Scale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scale_Quantity_Scale_Value10__c</fullName>
        <label>Scale Quantity/ Scale Value10</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scale_Quantity_Scale_Value1__c</fullName>
        <label>Scale Quantity/ Scale Value1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scale_Quantity_Scale_Value2__c</fullName>
        <label>Scale Quantity/ Scale Value2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scale_Type_Code__c</fullName>
        <label>Scale Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scale_Type__c</fullName>
        <label>Scale Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Scale_Type_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>From</fullName>
                </value>
                <value>
                    <fullName>To</fullName>
                </value>
                <value>
                    <fullName>Base-Scale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scale_UoM_Scale_Unit__c</fullName>
        <label>Scale UoM/Scale Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scaled_Price_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scaled Price Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShipTo_Code__c</fullName>
        <label>ShipTo Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipTo_Country_Code__c</fullName>
        <label>ShipTo-Country Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipTo_Country__c</fullName>
        <label>ShipTo-Country </label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipTo__c</fullName>
        <label>ShipTo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country_Code__c</fullName>
        <label>Ship-To Country Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship-To Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Condition_Code__c</fullName>
        <label>Shipping Condition Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Condition__c</fullName>
        <label>Shipping Condition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Code__c</fullName>
        <label>Sold To Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <label>Sold To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Converted_Current_Price__c</fullName>
        <label>Stamp Converted Current Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Current_Net_Price__c</fullName>
        <label>Stamp Current Net Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Floor_Net_Price__c</fullName>
        <label>Stamp Floor Net Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Floor_Price__c</fullName>
        <label>Stamp Floor Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_New_Net_Price__c</fullName>
        <label>Stamp New Net Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Reference_Net_Price__c</fullName>
        <label>Stamp Reference Net Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Reference_Price__c</fullName>
        <label>Stamp Reference Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sys_Id__c</fullName>
        <formula>SAP_Cluster__c  &amp; &apos;-&apos; &amp; SAP_Client_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Of_Payment_Code__c</fullName>
        <label>Terms of Payment Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Of_Payment__c</fullName>
        <label>Terms Of Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Materials__c</fullName>
        <label>Total Materials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UOM_Conversion_Factors__c</fullName>
        <label>UOM Conversion Factors</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Rate__c</fullName>
        <label>USD Rate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM__c</fullName>
        <label>UoM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value_Center_Code__c</fullName>
        <description>To store Value Center Code value which will selected by user while raising the price request</description>
        <label>Value Center Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Center__c</fullName>
        <description>To store Value Center value which will selected by user while raising the price request</description>
        <label>Value Center</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant_Code__c</fullName>
        <label>Variant Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <label>Variant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_UoM__c</fullName>
        <label>Volume_UoM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isFloorApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFloorApplicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNPCApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNPCApplicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPaymentTermsApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPaymentTermsApplicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isVolumeApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isVolumeApplicable</label>
        <type>Checkbox</type>
    </fields>
    <label>Pricing Request Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Pricing_Request__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR:{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Request Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Request Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>New_Per_cannot_be_negative</fullName>
        <active>true</active>
        <errorConditionFormula>IF(New_Unit__c!=&apos;%&apos;,AND(NOT(ISNULL(New_Per__c)),New_Per__c&lt;=0),AND(NOT(ISNULL(New_Per__c)),New_Per__c&lt;=0))</errorConditionFormula>
        <errorMessage>Per cannot be less than 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Per_cannot_be_negative</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Unit__c!=&apos;%&apos;,AND(NOT(ISNULL(Per__c)),Per__c&lt;=0),AND(NOT(ISNULL(Per__c)),Per__c&lt;=0))</errorConditionFormula>
        <errorMessage>Per cannot be less than 1</errorMessage>
    </validationRules>
</CustomObject>